Webinar timestamps in Table of Contents

--- a/docs/webinars/sfmc-webinar-account-architecture.mdx
+++ b/docs/webinars/sfmc-webinar-account-architecture.mdx
@@ -14,12 +14,12 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 ## Table of Contents
 
-1. SFMC Business Units
-2. Business Units Setup Patterns
-3. Single-Org vs Multi-Org
-4. Marketing Cloud Connect Patterns
-5. SAP, Private Domains & IPs
-6. Deliverability & IP Warmup
+1. SFMC Business Units ([5:53](https://youtu.be/3ngC9OLKaEI?t=353))
+2. Business Units Setup Patterns ([21:02](https://youtu.be/3ngC9OLKaEI?t=1262))
+3. Single-Org vs Multi-Org ([27:31](https://youtu.be/3ngC9OLKaEI?t=1651))
+4. Marketing Cloud Connect Patterns ([41:36](https://youtu.be/3ngC9OLKaEI?t=2496))
+5. SAP, Private Domains & IPs ([50:21](https://youtu.be/3ngC9OLKaEI?t=3021))
+6. Deliverability & IP Warmup ([56:22](https://youtu.be/3ngC9OLKaEI?t=3382))
 
 ## Video
 
