--- a/docs/webinars/sfmc-webinar-architecting-web-solutions.mdx
+++ b/docs/webinars/sfmc-webinar-architecting-web-solutions.mdx
@@ -14,14 +14,14 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 ## Table of Contents
 
-1. Web Studio 101
-2. AMPScript vs SSJS in Web Studio
-3. Web Studio Patterns
-    1. Landing Page
-    2. Web Form
-    3. Preference Center
-    4. Cloud Page App
-4. Web Studio Security
+1. Web Studio 101 ([3:07](https://youtu.be/a8RPRvVOXak?t=187))
+2. AMPScript vs SSJS in Web Studio ([12:38](https://youtu.be/a8RPRvVOXak?t=758))
+3. Web Studio Patterns ([19:53](https://youtu.be/a8RPRvVOXak?t=1193))
+    1. Landing Page ([20:10](https://youtu.be/a8RPRvVOXak?t=1210))
+    2. Web Form ([33:50](https://youtu.be/a8RPRvVOXak?t=2030))
+    3. Preference Center ([46:32](https://youtu.be/a8RPRvVOXak?t=2792))
+    4. Cloud Page App ([57:30](https://youtu.be/a8RPRvVOXak?t=3450))
+4. Web Studio Security ([1:03:17](https://youtu.be/a8RPRvVOXak?t=3797))
 
 ## Video
 
