--- a/docs/webinars/sfmc-webinar-cloud-page-apps.mdx
+++ b/docs/webinars/sfmc-webinar-cloud-page-apps.mdx
@@ -14,12 +14,12 @@ import { YouTube } from '../../src/components/VideoEmbed.js';
 
 ## Table of Contents
 
-1. SFMC Solutioning 101
-2. Cloud Page App 101
-3. AppExchange Menu Magic
-4. Cloud Page App SSO
-5. Simple Cloud Page App
-6. Complex Cloud Page App
+1. SFMC Solutioning 101 ([4:15](https://youtu.be/3ngC9OLKaEI?t=256))
+2. Cloud Page App 101  ([12:11](https://youtu.be/3ngC9OLKaEI?t=731))
+3. AppExchange Menu Magic ([14:20](https://youtu.be/3ngC9OLKaEI?t=860))
+4. Cloud Page App SSO ([22:06](https://youtu.be/3ngC9OLKaEI?t=1326))
+5. Simple Cloud Page App ([26:53](https://youtu.be/3ngC9OLKaEI?t=1613))
+6. Complex Cloud Page App ([43:36](https://youtu.be/3ngC9OLKaEI?t=2796))
 
 ## Video
 
