Metadata fixes for MobileConnect Data Views docs split

--- a/docs/config/sfmc-mobile-connect-data-views.mdx
+++ b/docs/config/sfmc-mobile-connect-data-views.mdx
@@ -3,8 +3,8 @@ id: sfmc-mobile-connect-data-views
 title: SFMC Mobile Connect Data Views
 sidebar_label: Mobile Connect Data Views
 description: Dive deep into SMS System Data Views - the backend Marketing Cloud data. Actionable pearls await.
-image: img/og/og-image-sfmc-sms-data-views.png
-tags: [Marketing Cloud, SMS, Configuration, SQL, Analytics, Data Extensions]
+image: img/og/og-image-sfmc-mobile-connect-data-views.png
+tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions, SMS]
 ---
 
 import Tabs from '@theme/Tabs';
