--- a/docs/config/sfmc-system-data-views.mdx
+++ b/docs/config/sfmc-system-data-views.mdx
@@ -4,7 +4,7 @@ title: SFMC System Data Views
 sidebar_label: System Data Views
 description: Dive deep into System Data Views - the backend Marketing Cloud data. Actionable pearls await.
 image: img/og/og-image-sfmc-system-data-views.png
-tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions]
+tags: [Marketing Cloud, Configuration, SQL, Analytics, Data Extensions, Email, Automation, Journey]
 ---
 
 import Tabs from '@theme/Tabs';
