Addition of custom SFTP folder permission option

--- a/docs/config/sfmc-features-on-demand.mdx
+++ b/docs/config/sfmc-features-on-demand.mdx
@@ -46,6 +46,7 @@ Smart Alerts for Marketing Cloud | Enables automatic notification for Marketing 
 Multi-Org Account | Allows you to connect different Sales/Service Cloud Orgs for each Marketing Cloud Business Unit. It is not reversible. | [Multi-Org Account](https://help.salesforce.com/articleView?id=sf.mc_co_upgrade_to_multi-org.htm&type=5) | Free
 Restore Encryption at Rest Key | If you revoked (Bring Your Own) Key for Encryption at Rest, this allows you to restore the key and retain the data if you act fast | [Restore SFMC Encryption Key](https://help.salesforce.com/articleView?id=sf.mc_overview_restore_byok.htm&type=5) | ?
 SSO Metadata | Allows you to implement Single Sign-On for your Marketing Cloud instance.| [SSO Implementation](https://help.salesforce.com/articleView?id=000356286&type=1&language=en_US&mode=1) | Free
+Custom Access Permissions for SFTP | You can ask Support to configure per-folder permissions for your FTP users | N/A | Free
 
 ## Deliverability Features
 
