Additional links with more content on the topic

--- a/docs/config/sfmc-code-resource.mdx
+++ b/docs/config/sfmc-code-resource.mdx
@@ -298,3 +298,10 @@ With the flexibility of Code Resources, the sky is the limit for compelling use 
 5. Build [Cloud Page Apps](../ssjs/snippets/sfmc-cloud-page-apps.mdx) to make your and your team lives easier.
 
 Know other inspiring Code Resource use cases? Let me know!
+
+## Learn more
+
+Looking for more? Check out follow up materials for added context and deeper dive:
+
+1. Webinar recording on [Architecting Web Solutions in SFMC](../webinars/sfmc-webinar-architecting-web-solutions.mdx).
+2. Webinar recording on [Cloud Page Apps](../webinars/sfmc-webinar-cloud-page-apps.mdx).
