--- a/docs/ssjs/snippets/sfmc-cloud-page-apps.mdx
+++ b/docs/ssjs/snippets/sfmc-cloud-page-apps.mdx
@@ -551,7 +551,7 @@ To implement it, copy and paste the above code to the top of the Cloud Page used
 There was much information to digest, so it's time for a streamlined step by step guide from zero to hero:
 
 1. __Logging Data Extensions__
-    1. In Content Builder or Email Studio create a [Cloud Page App Logging Data Extension](#capture-your-cloud-app-usage).
+    1. In Content Builder or Email Studio create a [Cloud Page App Logging Data Extension](#capture-your-cloud-page-app-usage).
     2. In Content Builder or Email Studio create an [Error Logging Data Extension](../debugging-ssjs.mdx#logging-to-data-extension).
     3. In both cases, one is enough for multiple Cloud Page Apps. If stored in the Shared Data Extensions folder, both can serve multiple Business Units.
 2. __Cloud Page__
@@ -581,3 +581,12 @@ There was much information to digest, so it's time for a streamlined step by ste
     1. Copy the [template](#secured-cloud-app-template) in the prefered language to the Cloud Page from step 2.i.
     2. Update the unique values in the variables at the top part of the template (CAPS_LOCK placeholders).
 6. __Build your solution__
+
+## Learn more
+
+Looking for more? Check out follow up materials for added context and deeper dive:
+
+1. Webinar recording on [Cloud Page Apps](../../webinars/sfmc-webinar-cloud-page-apps.mdx).
+2. Webinar recording on [Architecting Web Solutions in SFMC](../../webinars/sfmc-webinar-architecting-web-solutions.mdx).
+3. Article on [Power of SFMC Code Resources](../../config/sfmc-code-resource.mdx).
+4. Article on [SFMC AppExchange Solutions](../../config/sfmc-appexchange-solutions.mdx).
