--- a/sites/ideas/interaction-studio-ideas.mdx
+++ b/sites/ideas/interaction-studio-ideas.mdx
@@ -14,7 +14,7 @@ import { Button } from '../../src/components/Buttons.js';
 
 ## Catalog
 
-### Full Category hierarchy support for ETL
+### Full IS / MCP Category hierarchy support for ETL
 
 IS can create a working hierarchy tree of categories with a clean subcategory drill-down view in catalog UI and automatic summing of the views and revenue from the lowest level category up in the hierarchy.
 
@@ -30,6 +30,22 @@ It should change - there should be a feature parity between Sitemap and ETL for 
 
 <Button
     link='https://ideas.salesforce.com/s/idea/a0B8W00000MMZ27UAH/full-category-hierarchy-support-for-etl-in-interaction-studio'
+    text='Vote on IdeaExchange'
+    newTab='true'
+/>
+
+### Full IS / MCP Catalog Export
+
+Interaction Studio (Personalization) already supports Catalog manual export through the Export button on the Catalog listing. However, it exports products only with the limited data set available in the listing view.
+
+The problem with the current state is that the exported file does not contain complete catalog data (like exclusion data) and cannot be used as an ETL source.
+
+It is a huge issue because it makes it impossible to debug catalog item states outside of IS/MCP (and doing it directly in the platform is not scalable). It also makes it impossible to batch-modify items (for example, for selective archiving or exclusion) for subsequent ETL import.
+
+There should be an option to export the catalog in full scope, matching the ETL schema.
+
+<Button
+    link='https://ideas.salesforce.com/s/idea/a0B8W00000NVRj3UAH/full-is-mcp-catalog-export'
     text='Vote on IdeaExchange'
     newTab='true'
 />
@@ -142,6 +158,27 @@ Unsubscribe should be added to unlock a wide range of targeted campaigns like su
 
 <Button
     link='https://ideas.salesforce.com/s/idea/a0B8W00000NVN9DUAX/external-email-campaign-etl-unsubscription-event-type'
+    text='Vote on IdeaExchange'
+    newTab='true'
+/>
+
+## Reporting
+
+### Direct Attribution on IS Campaign level
+
+Interaction Studio (Personalization) offers a wide selection of Reports based on Activity, Results and Visits. It lacks, however, clear and detailed reporting on direct attribution from specific campaigns.
+
+Currently, attribution tracking is available in two places:
+
+1. The Main Dashboard (IS Home Page) displays the Total Stats and Revenue Dashboard at the top. It showcases direct revenue from campaigns (The User clicks a product recommendation and purchases that specific promoted item in the selected timeframe). Unfortunately, it does not offer per campaign (and per experience) data, only a global value split between all Web Recommendations and all Email Recommendations ([OTE](../../../docs/interaction-studio/is-open-time-email)).
+2. On the other hand, Specific Campaign Statistics display detailed statistics for each experience. Unfortunately, they don't offer direct attribution. While you can select whether the attribution should be based on click or view and what should be the attribution window, it is much more random data. View attribution means that if a user viewed a campaign and purchased anything (even wholly unrelated to the campaign recommendation) in the specified timeframe - it will be treated as revenue from that campaign. Similarly, click attribution means that if the user clicks on the campaign (for example, on a Laptop recommendation) and makes any purchase (for example, a new Monitor and cable), the whole revenue will still be attributed to the campaign. While it is acceptable for product-less campaigns (like Infobar) where direct attribution might not be possible, it's useless for meaningful analysis of recommendations conversion.
+
+There is no clean workaround for that problem - the Data Warehouse end of sales didn't help either. The only way right now is to append Campaign & Experience IDs to all links in the Campaigns and move the calculation to an external analytics system. That's a huge, complex work with a subpar experience of displaying reports in 3rd party solution, compared to having it directly in the system deploying those campaigns and tracking purchases - the system already calculating it for the existing total results.
+
+There should be an additional option on the Campaign Statistics level (on top of existing ones that are good for product-less campaigns) displaying attribution with the same logic as the Main Dashboard but with the per-experience detail.
+
+<Button
+    link='https://ideas.salesforce.com/s/idea/a0B8W00000NVTrFUAX/direct-attribution-on-is-campaign-level'
     text='Vote on IdeaExchange'
     newTab='true'
 />
